2015-01-12 Martin Grønholdt

* fs/root_src/404.html: Update layout to match other pages.
* fs/root_src/connect/ap.html: Dynamic WS host.
* fs/root_src/connect/index.html: Dynamic WS host and station msg handler.
* fs/root_src/connect/net.html: Dynamic WS host and network name code fixes.
* fs/root_src/css/custom.css: Smaller footer text.
* user/handlers/http/websocket/websocket.c: Doxygen.
* user/handlers/websocket/wifiswitch.c: "station" response.
* user/handlers/websocket/wifiswitch.c (ws_wifiwsitch_add_data): Added to stop repeating code.
* user/include/user_config.h: Add file name to warnings and errors.
* user/user_main.c (connected): Only start captive portal in AP mode. 
*  user/user_main.c (wait_config): Added to wait some seconds for config button press.


2015-01-11 Martin Grønholdt

* Learned that David Bowie died yesterday.


2015-01-09 Martin Grønholdt

* README.md: More ramblings.
* fs/root_src/about.html: Dynamic WS host.
* user/handlers/websocket/wifiswitch.c: fw message handling.
* user/include/handlers/websocket/wifiswitch.h: Comments.
* user/include/user_config.h: Even more sane WebSocket time out.
* user/user_main.c: Adjusted output.


2015-01-06 Martin Grønholdt

* user/handlers/http/fs/http-fs.c: Add missing header.
* user/handlers/http/websocket/websocket.c (http_ws_sent_cb): Remove uneeded var.
* user/handlers/websocket/wifiswitch.c: Add ws_wifiswitch_send_gpio_status to send GPIO status.
* user/include/handlers/websocket/wifiswitch.h: Longer timeout now that close seems to work.
* user/user_main.c (button_switch): Send GPIO status using WebSocket.

2015-01-05 Martin Grønholdt

* fs/root_src/css/custom.css: Added connection status rules
* fs/root_src/index.html: Added connection status.
* user/handlers/http/websocket/websocket.c: Use net_connection.
* user/handlers/websocket/wifiswitch.c: Close handler.
* user/include/handlers/websocket/wifiswitch.h: Added time out define and close.
* user/include/net/dns.h: C99.