@@ -99,7 +99,7 @@
 				statusMsg.innerHTML = "<strong>Updated.</strong>";
 				
 			}
-			if (msg.type === "station") {
+			if (msg.type === "ap") {
 				var ip = document.getElementById("ip_addr");
 				ip.innerHTML = msg.ip;
 				
@@ -112,8 +112,19 @@
 				statusMsg.className = "message success";
 				statusMsg.innerHTML = "<strong>Updated.</strong>";
 			}
+			if (msg.type === "station") {
+				var ip = document.getElementById("ip_addr");
+				ip.innerHTML = msg.ip;
 				
+				var ssid = document.getElementById("network");
+				ssid.innerHTML = msg.ssid;
+
+				var hostname = document.getElementById("hostname");
+				hostname.innerHTML = msg.hostname;
 				
+				statusMsg.className = "message success";
+				statusMsg.innerHTML = "<strong>Updated.</strong>";
+			}				
         };
 
         // Display any errors that occur
